# morose

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  icon.rc  main.cpp  morose_config.h.in
.github/workflows/: NewVersionRelease.yml
cmake/: FindMorose.cmake
common/: common.cpp  common.h
config/: DeployConfig.json  ProductConfigTemplate.json
resource/: morose.qrc
resource/qml/: main.qml
script/: pack-installer.iss.in
src/: main.cpp
src/common/: common.cpp  qmltranslator.cpp  qmltranslator.h
